Add linter in GH actions
Signed-off-by: Matt Delacour <matt.delacour@shopify.com>

--- a/dev.yml
+++ b/dev.yml
@@ -5,5 +5,5 @@ up:
   - python: 3.8.8
   - custom:
       name: Install the dependencies locally
-      met?: pip install -e ".[dev]"
+      met?: make install-ci-dependencies
       meet: "True"
