--- a/shipit.yml
+++ b/shipit.yml
@@ -2,4 +2,4 @@ deploy:
   override:
     - assert-egg-version-tag setup.py
     - python setup.py sdist
-    - twine upload -r pypi -u shopify -p $PYPI_PASSWORD_SHOPIFY dist/*
+    - twine upload --repository-url https://pypi.org -u shopify -p $PYPI_PASSWORD_SHOPIFY dist/*
